--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,7 @@ spring:
     mongodb:
       host: localhost
       port: 27017
-      database: cache-origin
-      username: root
-      password: root
-      authentication-database: admin
+      database: movies
   redis:
     host: localhost
     port: 6379
