--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   data:
     mongodb:
-      host: localhost
-      port: 27017
-      database: movies
+      uri: mongodb://mongo-1:27017,mongo-2:27018,mongo-3:27019/movies?replicaSet=mdbdefGuide
   redis:
     host: localhost
     port: 6379
     timeout: 100ms
+logging:
+  level:
+    org.springframework.data.mongodb: DEBUG
